--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1352,3 +1352,106 @@ span{
    color: var(--secondaryColor);
 }
 /* Portfolio page Section CSS End */
+
+
+/* Contact Us Page Section CSS Start */
+/* Via Contact Section CSS Start */
+#via_contact .container .contact_details i{
+   width: 50px;
+   height: 50px;
+   line-height: 50px;
+   text-align: center;
+   border-radius: 50%;
+   margin: auto;
+   font-size: 30px;
+   background-color: var(--primaryColor);
+}
+#via_contact .container .contact_details .link{
+   padding: 25px 20px;
+}
+#via_contact .container .contact_details .link a{
+   font-size: 14px;
+   color: var(--secondaryColor);
+}
+#via_contact .container .contact_details .contactSite{
+   border-right: 1px solid #c4c4c4;
+}
+#via_contact .container .contact_details .contactSite:nth-child(3) {
+   border: none;
+}
+/* Via Contact Section CSS End */
+
+/* Google Map Section CSS Start */
+#g-map iframe{
+   width: 100%;
+   height: 300px;
+   margin: 70px 0px 100px 0px;
+}
+/* Google Map Section CSS End */
+
+/* Newsletter Section CSS Start */
+#newsletter .container .heading{
+   margin-bottom: 60px;
+}
+#newsletter .container .heading h2{
+   font-size: 35px;
+   font-weight: 300;
+}
+#newsletter .container .heading p{
+   font-size: 16px;
+   color: var(--textColor);
+   padding: 30px 20px 0px 20px;
+}
+#newsletter .container .backround{
+   background: url(../images/newsletter_bg.png);
+   min-height: 400px;
+   position: relative;
+}
+#newsletter .container .backround .form{
+   height: 320px;
+   width: 630px;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-30%, -50%);
+   background-color: var(--primaryWhite);
+   padding: 40px 30px;
+}
+#newsletter .container .backround .form input{
+   background: none;
+   width: 270px;
+   border: 1px solid var(--secondaryWhite);
+   font-size: 13px;
+   color: #777777;
+   padding: 10px;
+}
+#newsletter .container .backround .form .name{
+   margin-left: 20px;
+}
+#newsletter .container .backround .form textarea{
+   display: block;
+   resize: none;
+   width: 100%;
+   height: 120px;
+   margin: 30px 0px;
+   border: 1px solid var(--secondaryWhite);
+   font-size: 13px;
+   color: #777777;
+}
+#newsletter .container .backround .form button{
+   display: block;
+   margin: auto;
+   background: none;
+   border: none;
+   text-transform: uppercase;
+   font-size: 16px;
+   font-weight: 500;
+   /* letter-spacing: 25px; */
+   color: var(--secondaryColor);
+   padding: 10px 0px;
+   padding-right: 45%;
+   padding-left: 45%;
+   background-color: var(--primaryColor);
+}
+/* Newsletter Section CSS End */
+/* Contact Us Page Section CSS End */
