--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1363,7 +1363,7 @@ span{
 
 
 /* ============================= */
-/* Blog Details Page CSS Start */
+/* Blog list View Page CSS Start */
 /* Blog Top Bar Section CSS Start */
 #blogTop_bar{
    margin-bottom: 50px;
@@ -1607,8 +1607,108 @@ span{
    transition: .4s;
 }
 /* NExt Page Section CSS End */
+/* // Blog List View Page CSS End */
+/* ============================== */
 
-/* // Blog Details Page CSS End */
+/* ============================== */
+/* Blog Details page Section CSS Start */
+#Blog_main_section .blog_view .blogHeading{
+   padding: 50px 25px 0px 25px;
+}
+#Blog_main_section .blog_view .blogHeading h4{
+   font-size: 18px;
+}
+#Blog_main_section .blog_view .blogHeading a{
+   font-size: 13px;
+   color: var(--textColor);
+   padding: 20px 0px;
+}
+#Blog_main_section .blog_view .blogHeading p{
+   color: var(--textColor);
+   font-size: 14px;
+   text-align: justify;
+}
+#Blog_main_section .blog_view .blogHeading .italic{
+   background-color: #f1f1f1;
+   border-left: 3px solid var(--primaryColor);
+}
+#Blog_main_section .blog_view .blogHeading .italic p{
+   padding: 25px;
+}
+#Blog_main_section .blog_view .comments_section{
+   padding: 0px 25px;
+}
+#Blog_main_section .blog_view .comments_section h6{
+   font-size: 18px;
+   padding-bottom: 20px;
+}
+#Blog_main_section .blog_view .comments_section .commentsBox{
+   border-top: 1px solid var(--secondaryColor);
+   border-bottom: 1px solid var(--secondaryColor);
+}
+#Blog_main_section .blog_view .comments_section .comments .content h6{
+   font-size: 14px;
+   font-weight: 500;
+}
+#Blog_main_section .blog_view .comments_section .comments .img img{
+   width: 150px;
+   /* height: 100px; */
+}
+#Blog_main_section .blog_view .comments_section .comments .content p{
+   font-size: 14px;
+   color: var(--textColor);
+   text-align: justify;
+}
+#Blog_main_section .blog_view .comments_section .comments .content a{
+   font-size: 14px;
+   color: var(--textColor);
+}
+#Blog_main_section .blog_view .comments_section .comments .content a:hover{
+   color: var(--primaryColor);
+   transition: .4s;
+}
+
+#Blog_main_section .blog_view .leaveReaply{
+   padding: 0px 25px;
+}
+#Blog_main_section .blog_view .leaveReaply h5{
+   font-size: 18px;
+   padding: 25px 0px 30px 0px;
+   text-transform: uppercase;
+}
+#Blog_main_section .blog_view .leaveReaply input{
+   background: none;
+   width: 340px;
+   border: 1px solid var(--secondaryWhite);
+   font-size: 13px;
+   color: #777777;
+   padding: 10px;
+}
+#Blog_main_section .blog_view .leaveReaply textarea{
+   display: block;
+   resize: none;
+   width: 100%;
+   height: 120px;
+   margin: 13px 0px;
+   border: 1px solid var(--secondaryWhite);
+   font-size: 13px;
+   color: #777777;
+}
+#Blog_main_section .blog_view .leaveReaply button{
+   display: block;
+   margin: auto;
+   background: none;
+   border: none;
+   text-transform: uppercase;
+   font-size: 16px;
+   font-weight: 500;
+   letter-spacing: 5px;
+   color: var(--secondaryColor);
+   padding: 10px 0px;
+   width: 100%;
+   background-color: var(--primaryColor);
+}
+/* // Blog Details page Section CSS End */
 /* ============================== */
 
 /* ============================== */
